Fix the spacing stuff for messages
To make it easy, we are using floats.

Also moved the inline styles into the stylesheet

--- a/contacts/static/style.less
+++ b/contacts/static/style.less
@@ -600,16 +600,22 @@ a[data-toggle='collapse'] {
     }
 }
 
-.avatar-nurse {
+.avatar-nurse,
+.avatar-system {
     vertical-align: bottom;
+    display:inline-block; 
+    padding-left:15px;
+}
+.avatar-nurse {
     color: @brand-success;
 }
 .avatar-system {
-    vertical-align: bottom;
     color: gray;
 }
 .avatar-participant {
     vertical-align: bottom;
+    display: inline-block;
+    padding-right: 15px;
     color: @brand-primary;
 }
 #msg-list-btn-group .btn {
@@ -620,12 +626,15 @@ a[data-toggle='collapse'] {
 
 #messagesList {
     border: 1px solid #ccc;
+    overflow-y: auto;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     padding: 6px 10px;
     width: 100%;
     height: 625px;
     .message {
+        width: 70%;
+        display:inline-block;
         border-radius: 20px 0px;
         margin-bottom: 15px;
         padding: 0;
